--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "css-loader": "^0.28.4",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0",
-    "vue-style-loader": "^3.0.1"
+    "vue-style-loader": "^3.0.1",
+    "better-scroll":"^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
